# config-catalyst

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.test  README.md  copyright.txt  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
dynamic_importer/: main.py  util.py
dynamic_importer/api/: client.py  exceptions.py
dynamic_importer/processors/: __init__.py  dotenv.py  json.py  tf.py  tfvars.py  yaml.py
dynamic_importer/samples/: .env.sample  azureTRE.yaml  short.json  terraform.tfvars  variables.tf
dynamic_importer/samples/dotenvs/: .env.default.sample
samples/: .env.sample  azureTRE.yaml  variables.tf
samples/advanced/: app-config.yaml.hbs  values.yaml
src/dynamic_importer/: main.py  util.py  walker.py
src/dynamic_importer/api/: __init__.py  client.py  exceptions.py  types.py
src/dynamic_importer/processors/: __init__.py  dotenv.py  json.py  tf.py  tfvars.py  yaml.py
src/samples/: terraform.tfvars
src/samples/dotenvs/: .env.dev.sample  .env.prod.sample  .env.staging.sample
src/tests/: test_cli.py  test_client.py  test_directory_walking.py
src/tests/fixtures/: requests.py
src/tests/processors/: test_yaml.py
