[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudtruth-dynamic-importer"
version = "0.5.0"
dependencies = [
    "click",
    "python-dotenv @ git+https://github.com/cloudtruth/python-dotenv@feature/dump-dotenv",
    "python-hcl2",
    "python-liquid",
    "ruamel.yaml[jinja2] < 0.19",
    "requests",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "mypy",
    "pytest",
    "pytest-black",
    "pytest-cov",
    "pytest-mypy",
    "pytest-timeout",
    "types-requests",
]
[project.scripts]
cloudtruth-dynamic-importer = "dynamic_importer.main:import_config"

[tool.mypy]
packages = "dynamic_importer"

[[tool.mypy.overrides]]
module = ["ruamel"]
ignore_missing_imports = "true"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "--cov=dynamic_importer", "--cov-report=term-missing", "--cov-report=xml", "--mypy"]
minversion = 6.0

[tool.setuptools.packages.find]
where = ["src"]
include = ["dynamic_importer", "tests"]
